istio/hello/webpage/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-webpage
  namespace: hello-webpage
spec:
  gateways:
  - webpage-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: http-dev
        port:
          number: 8080
